<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vnroot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFF">

        <include
            android:id="@+id/vntitle"
            layout="@layout/widget_titlebar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/vnscroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/vnbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vntitle">

            <TextView
                android:id="@+id/vntext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="20dp"
                android:paddingBottom="32dp"
                android:lineSpacingExtra="6dp"
                android:textSize="18sp"
                tools:text="正文" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/vnbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FCFCFF"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/vnfontdec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:text="@string/font_dec" />

            <Button
                android:id="@+id/vnprev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/prev_chapter" />

            <TextView
                android:id="@+id/vnpos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/zero_per_zero" />

            <Button
                android:id="@+id/vnnext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/next_chapter" />

            <Button
                android:id="@+id/vnfontinc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:text="@string/font_inc" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
