<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:viewBindingIgnore="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/inftitle"
            layout="@layout/widget_titlebar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infseekrow"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:alpha="0.8"
            android:background="@drawable/rndbg_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inftitle">

            <SeekBar
                android:id="@+id/infseek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/inftxtprogress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inftxtprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/zero_per_zero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/infseek"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/inchapternav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infseekrow">

            <Button
                android:id="@+id/btprevchapter"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/reader_btn"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/prev_chapter"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnextchapter"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/reader_btn"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/next_chapter"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btinvert"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/reader_btn"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/reader_invert_off"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>